# quadcopter_model

./: CMakeLists.txt  README.md
include/quadcopter_model/common/: command.hpp  integrator_base.hpp  integrator_euler.hpp  integrator_rk4.hpp  logger.hpp  math.hpp  parameter_base.hpp  pend_state.hpp  quad_state.hpp  timer.hpp  types.hpp
include/quadcopter_model/dynamics/: dynamics_base.hpp  quadrotor_dynamics.hpp
include/quadcopter_model/objects/: object_base.hpp  quadrotor.hpp  static_gate.hpp  static_object.hpp
include/quadcopter_model/sensors/: imu.hpp  sensor_base.hpp
src/common/: command.cpp  integrator_base.cpp  integrator_euler.cpp  integrator_rk4.cpp  logger.cpp  math.cpp  parameter_base.cpp  pend_state.cpp  quad_state.cpp  timer.cpp
src/dynamics/: dynamics_base.cpp  quadrotor_dynamics.cpp
src/objects/: object_base.cpp  quadrotor.cpp
src/sensors/: imu.cpp  sensor_base.cpp
